microsoft-dynamics-nav/2.0/modules/ROOT/pages/ms-dynamics-nav-connector-reference.adoc
= Microsoft Dynamics NAV Connector Reference - Mule 4
:page-aliases: connectors::ms-dynamics/ms-dynamics-nav-connector-reference.adoc



Microsoft Dynamics NAV Connector v2.0

Release Notes: xref:release-notes::connector/ms-dynamics-nav-connector-release-notes-mule-4.adoc[Microsoft Dynamics NAV Connector Release Notes]

== Limitations

* Microsoft Dynamics Nav Connector cannnot be used in CloudHub 2.0 due to the fact that the underlying CXF library requires a JDK for generating schema classes.

== Dynamics Nav Configuration

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | |x
| Connection a| * NTLM
* OAuth
 | The connection types that can be provided to this configuration. | |x
| Expiration Policy a| ExpirationPolicy |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. The runtime actually purges the instances as it sees fit. |  |
|===

== NTLM Connection Type

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Domain a| String |  Domain of the Dynamics NAV instance |  |
| Username a| String |  The Windows username to connect to Dynamics NAV |  |x
| Password a| String |  The Windows password to connect to Dynamics NAV |  |x
| Soap Url a| String |  Base URL where the SOAP services are exposed in the form `+https://<Server>:<WebServicePort>/<ServerInstance>/WS+`. Example: `+https://hostname:7047/DynamicsNAV90/WS+` |  |x
| OData Url a| String |  Base URL where the OData services are exposed in the form `+https://<Server>:<WebServicePort>/<ServerInstance>/OData+`. Example: `+https://hostname:7048/DynamicsNAV90/OData+`. |  |x
| Company Name a| String |  Dynamics NAV Company to which connect. In case the field is left blank, the default configured one is used. |  |
| Disable SSL certificate validation a| Boolean |  |  false |
| Reconnection a| Reconnection |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy |  |
| Pooling Profile a| PoolingProfile |  Characteristics of the connection pool |  |
|===

[[dynamics-nav-config_oauth]]
== OAuth Connection Type

include::connectors::partial$oauth2-description.adoc[]

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Username a| String |  The Windows username to connect to Dynamics NAV |  |x
| Access Token a| String |  The Windows password to connect to Dynamics NAV |  |x
| Soap Url a| String |  Base URL where the SOAP services are exposed in the form `+https://<Server>:<WebServicePort>/<ServerInstance>/WS+`. Example: `+https://hostname:7047/DynamicsNAV90/WS+` |  |x
| OData Url a| String |  Base URL where the OData services are exposed in the form `+https://<Server>:<WebServicePort>/<ServerInstance>/OData+`. Example: `+https://hostname:7048/DynamicsNAV90/OData+`. |  |x
| Company Name a| String |  Dynamics NAV Company to which connect. In case the field is left blank, the default configured one is used. |  |
| Disable SSL certificate validation a| Boolean |  |  false |
| Reconnection a| Reconnection |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy |  |
| Pooling Profile a| PoolingProfile |  Characteristics of the connection pool |  |
|===

== Associated Operations

* Codeunit Operation
* OData Query
* Page Operation

== Codeunit Operation

`<nav:codeunit-operation>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Entity a| Object |  |  `#[payload]` |
| Service a| String |  |  |x
| Operation a| String |  |  |x
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  |
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  `#[payload]` |
| Reconnection Strategy a| * Reconnect
* Reconnect Forever |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[cols=".^50%,.^50%"]
|===
|Type |Any
|===

=== For Configurations

* dynamics-nav-config

=== Throws

* NAV:CONNECTIVITY
* NAV:INCORRECT_CREDENTIALS
* NAV:RETRY_EXHAUSTED
* NAV:UNKNOWN

== OData Query

`<nav:odata-query>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Query a| String |  |  |x
| Fetch Size a| Number |  |  |x
| Streaming Strategy a| * Repeatable In Memory Iterable
* Repeatable File Store Iterable
| Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  |
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  `#[payload]` |
| Reconnection Strategy a| * Reconnect
* Reconnect Forever |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[cols=".^50%,.^50%"]
|===
|Type |Array of Object
|===

=== For Configurations

* dynamics-nav-config

=== Throws

* NAV:CONNECTIVITY
* NAV:INCORRECT_CREDENTIALS
* NAV:UNKNOWN


[[pageOperation]]
== Page Operation

`<nav:page-operation>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Entity a| Object |  |  `#[payload]` |
| Service a| String |  |  |x
| Operation a| String |  |  |x
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  |
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  `#[payload]` |
| Reconnection Strategy a| * Reconnect
* Reconnect Forever |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[cols=".^50%,.^50%"]
|===
|Type |Any
|===

=== For Configurations

* dynamics-nav-config

=== Throws

* NAV:CONNECTIVITY
* NAV:INCORRECT_CREDENTIALS
* NAV:RETRY_EXHAUSTED
* NAV:UNKNOWN

== Reconnection Type

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy |  |
| Reconnection Strategy a| * Reconnect
* Reconnect Forever | The reconnection strategy to use |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds) | |
| Count a| Number | The number of reconnection attempts to make | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread |true |
|===

[[PoolingProfile]]
== Pooling Profile Type

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Active a| Number | Controls the maximum number of Mule components that can be borrowed from a session at one time. When set to a negative value, there is no limit to the number of components that may be active at one time. When maxActive is exceeded, the pool is said to be exhausted. |  |
| Max Idle a| Number | Controls the maximum number of Mule components that can sit idle in the pool at any time. When set to a negative value, there is no limit to the number of Mule components that may be idle at one time. |  |
| Max Wait a| Number | Specifies the number of milliseconds to wait for a pooled component to become available when the pool is exhausted and the exhaustedAction is set to WHEN_EXHAUSTED_WAIT. |  |
| Min Eviction Millis a| Number | Determines the minimum amount of time an object may sit idle in the pool before it is eligible for eviction. When non-positive, no objects will be evicted from the pool due to idle time alone. |  |
| Eviction Check Interval Millis a| Number | Specifies the number of milliseconds between runs of the object evictor. When non-positive, no object evictor is executed. |  |
| Exhausted Action a| Enumeration, one of:

** WHEN_EXHAUSTED_GROW
** WHEN_EXHAUSTED_WAIT
** WHEN_EXHAUSTED_FAIL | Specifies the behavior of the Mule component pool when the pool is exhausted. Possible values are: "WHEN_EXHAUSTED_FAIL", which will throw a NoSuchElementException, "WHEN_EXHAUSTED_WAIT", which will block by invoking Object.wait(long) until a new or idle object is available, or WHEN_EXHAUSTED_GROW, which will create a new Mule instance and return it, essentially making maxActive meaningless. If a positive maxWait value is supplied, it will block for at most that many milliseconds, after which a NoSuchElementException will be thrown. If maxThreadWait is a negative value, it will block indefinitely. |  |
| Initialisation Policy a| Enumeration, one of:

** INITIALISE_NONE
** INITIALISE_ONE
** INITIALISE_ALL | Determines how components in a pool should be initialized. The possible values are: INITIALISE_NONE (will not load any components into the pool on startup), INITIALISE_ONE (will load one initial component into the pool on startup), or INITIALISE_ALL (will load all components in the pool on startup) |  |
| Disabled a| Boolean | Whether pooling should be disabled |  |
|===

[[ExpirationPolicy]]
== Expiration Policy Type

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[repeatable-in-memory-iterable]]
== Repeatable In Memory Iterable Type

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | This is the amount of instances that will be initially be allowed to be kept in memory in order to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then it will be expanded according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. Default value is 100 instances. |  |
| Buffer Size Increment a| Number | This is by how much will the buffer size expands if it exceeds its initial size. Setting a value of zero or lower will mean that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised when the buffer gets full. Default value is 100 instances. |  |
| Max Buffer Size a| Number | This is the maximum amount of memory that will be used. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised. A value lower or equal to zero means no limit. |  |
|===

[[repeatable-file-store-iterable]]
== Repeatable File Store Iterable Type

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max In Memory Size a| Number | This is the maximum amount of instances that will be kept in memory. If more than that is required, then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
